рефакторинг ProductPricesSyncService